--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,8 @@ services:
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       REDIS_URL: redis://:${REDIS_PASSWORD}@redis:6379/0
+    volumes:
+      - ./app:/app
     depends_on:
       db:
         condition: service_healthy
